迁移电磁炮模块动态列表